// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AreaChart ACT theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-spacing-xs-2 MuiGrid-direction-xs-column MuiGrid-grid-xs-12 css-13ll9kh-MuiGrid-root"
  >
    <div
      class="recharts-responsive-container"
      style="width: 100%; height: 400px; min-width: 0;"
    />
  </div>
</div>
`;

exports[`AreaChart ACT_ET theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-spacing-xs-2 MuiGrid-direction-xs-column MuiGrid-grid-xs-12 css-13ll9kh-MuiGrid-root"
  >
    <div
      class="recharts-responsive-container"
      style="width: 100%; height: 400px; min-width: 0;"
    />
  </div>
</div>
`;

exports[`AreaChart ENCOURA theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-spacing-xs-2 MuiGrid-direction-xs-column MuiGrid-grid-xs-12 css-13ll9kh-MuiGrid-root"
  >
    <div
      class="recharts-responsive-container"
      style="width: 100%; height: 400px; min-width: 0;"
    />
  </div>
</div>
`;

exports[`AreaChart ENCOURA_CLASSIC theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-spacing-xs-2 MuiGrid-direction-xs-column MuiGrid-grid-xs-12 css-13ll9kh-MuiGrid-root"
  >
    <div
      class="recharts-responsive-container"
      style="width: 100%; height: 400px; min-width: 0;"
    />
  </div>
</div>
`;

exports[`AreaChart ENCOURAGE theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-spacing-xs-2 MuiGrid-direction-xs-column MuiGrid-grid-xs-12 css-14d6eu1-MuiGrid-root"
  >
    <div
      class="recharts-responsive-container"
      style="width: 100%; height: 400px; min-width: 0;"
    />
  </div>
</div>
`;
